--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myportfoliosite",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://felixwqp.github.io",
+  "homepage": "http://felixwqp.github.io/Website",
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
